tests/snapshots/snapshots__pipeline@vec_type_for_nat.pr.snap
---
source: tests/snapshots.rs
expression: "prism::report(&src)"
input_file: tests/cases/vec_type_for_nat.pr
---
== tokens ==
VOpen Type UIdent("Vec") LParen Ident("a") Comma Ident("n") Colon UIdent("Nat") RParen Eq UIdent("MkVec") LParen UIdent("List") LParen Ident("a") RParen RParen VSemi Fn Ident("demo") LParen Ident("x") Colon UIdent("Vec") LParen KwInt Comma KwBool RParen RParen Colon KwInt Eq Int(IntLit { value: 0, suffix: None }) VClose

== ast ==
Program {
    types: [
        DataDecl {
            name: "Vec",
            params: [
                "a",
                "n",
            ],
            param_kinds: [
                Type,
                Nat,
            ],
            ctors: [
                Ctor {
                    name: "MkVec",
                    args: [
                        Con(
                            "List",
                            [
                                Var(
                                    "a",
                                ),
                            ],
                        ),
                    ],
                    fields: None,
                },
            ],
            deriving: [],
            newtype: false,
            span: 130..167,
        },
    ],
    effects: [],
    errors: [],
    aliases: [],
    classes: [],
    instances: [],
    fns: [
        Decl {
            name: "demo",
            params: [
                Param {
                    name: "x",
                    ty: Some(
                        Con(
                            "Vec",
                            [
                                Int,
                                Bool,
                            ],
                        ),
                    ),
                    borrow: false,
                    default: None,
                },
            ],
            ret: Some(
                Int,
            ),
            eff: None,
            constraints: [],
            body: Spanned {
                node: Int(
                    IntLit {
                        value: 0,
                        suffix: None,
                    },
                ),
                span: 205..206,
            },
            wheres: [],
            span: 169..206,
        },
    ],
}

== types ==
Type Error: in `demo`: kind mismatch: parameter 2 of `Vec` has kind `Nat`, but a `Type` was given
   ╭─[ <source>:5:1 ]
   │
 5 │ fn demo(x : Vec(Int, Bool)) : Int = 0
   │ ──────────────────┬──────────────────  
   │                   ╰──────────────────── in `demo`: kind mismatch: parameter 2 of `Vec` has kind `Nat`, but a `Type` was given
───╯
